hard-gists/814599/run.log
=== Docker Run Log for 814599 ===
Started at: Mi 29. Okt 17:39:44 CET 2025

[2025-10-29 17:39:44] START: Running container for 814599
[2025-10-29 17:39:45] SUCCESS: Container fe7cec7f8c338e9d3f3a9e42236952124ce8fdeb7681a7a3dfac0c184801123f started for 814599
=== Container logs for 814599 ===
  File "/snippet.py", line 18
    print row_dict
    ^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 814599 ===
[2025-10-29 17:39:47] INFO: Container fe7cec7f8c338e9d3f3a9e42236952124ce8fdeb7681a7a3dfac0c184801123f has stopped
